--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,17 @@ body {
   margin-bottom: 8px;
 }
 
+.pref-rectangle {
+  background: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+  padding: 24px 100px;
+}
+
+.pref-icon {
+  /* padding: 24px 100px; */
+}
+
 .pref-text {
   font-size: 16px;
   line-height: 1.5;
@@ -302,6 +313,27 @@ body {
   text-align: center;
   margin-bottom: 8px;
 }
+/* --------------------SECTION 5 ------- */
+.customers.list {
+  display: flex;
+  gap: 24px;
+
+  list-style: none;
+}
+
+.section.customers {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.customers-content {
+  background-color: #ffffff;
+  /* width: calc((100% - 24px * 5) / 6); */
+  padding: 16px 32px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+}
+
 .container.footer-content {
 }
 .pref-text {
