--- a/css/style.css
+++ b/css/style.css
@@ -166,15 +166,13 @@ body {
 
 /* ---------------------SECTION 1 */
 
-.section {
-  /* padding-top: 120px;
-  padding-bottom: 120px; */
-}
-
 .section.hero {
   background: var(--textcolor);
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: url(../images/people-office.jpg);
+  margin-right: auto; margin-left: auto; 
+  max-width:1440px;
 }
 
 .hero-text {
@@ -216,6 +214,12 @@ body {
 .contact-link:focus {
   background-color: #404bbf;
 }
+
+.container.hero-container{
+  /* height: 100%;
+  width: 100%;
+	object-fit: cover; */
+  }
 
 .hero-btn-txt {
 }
@@ -302,6 +306,7 @@ body {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   width: calc((100% - 24px * 3) / 4);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-name-group {
@@ -313,7 +318,30 @@ body {
   text-align: center;
   margin-bottom: 8px;
 }
+.social-link{
+  height: 40px;
+  width: 40px;
+  border-radius: 20px;
+  background-color: #404bbf;
+  padding: 12px;
+}
+.social-link:hover,
+.social-link:focus{
+  background: #31D0AA;
+}
+
+.social.list{
+  display:flex;
+  gap:24px;
+  margin-top: 8px;
+}
 /* --------------------SECTION 5 ------- */
+.customers-item{
+  height: 88px;
+  width: 168px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+}
 .customers.list {
   display: flex;
   gap: 24px;
@@ -326,16 +354,33 @@ body {
   padding-bottom: 120px;
 }
 
-.customers-content {
+.customers.link {
   background-color: #ffffff;
   /* width: calc((100% - 24px * 5) / 6); */
-  padding: 16px 32px;
-  border: 1px solid #8e8f99;
+  height: 100%;
+  width: 100%;
+  display: flex; align-items: center; justify-content: center;
   border-radius: 4px;
+  border: 1px solid #8E8F99;
+}
+.customers.link:hover {
+  color: #404BBF; border-color: #404BBF;
 }
 
-.container.footer-content {
+.icon-customers{
+  fill: currentColor;
 }
+
+.customers-item:hover,
+.customers-item:focus{
+  
+}
+
+.footer-social {
+  margin-left: 120px;
+  max-width: 208px;
+}
+
 .pref-text {
   text-align: center;
 }
@@ -345,12 +390,22 @@ body {
 
   padding: 100px 0;
 }
+
+.footer .container{
+display:flex;
+}
 .footer-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
   margin-top: 16px;
+}
+.footer-social-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  margin-bottom: 16px;
 }
 
 .logo-footer {
@@ -386,6 +441,10 @@ body {
 }
 .work-items {
   width: calc((100% - 48px) / 3);
+}
+
+.work-items:hover{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .work.list {
   display: flex;
