--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,20 @@ body {
   align-items: center;
 }
 
+.menu-nav.list {
+  font-weight: 500;
+  list-style-type: none;
+  margin-left: 76px;
+  color: #404bbf;
+}
+
+.menu-nav.link {
+  letter-spacing: 0.02em;
+  color: #404bbf;
+  text-decoration: none;
+  padding: 24px 0 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .active {
   position: relative;
 }
@@ -136,21 +150,6 @@ body {
   left: 0;
   bottom: -1px;
 }
-
-.menu-nav.list {
-  font-weight: 500;
-  list-style-type: none;
-  margin-left: 76px;
-  color: #404bbf;
-}
-.menu-nav.link {
-  letter-spacing: 0.02em;
-  color: var(--textcolor);
-  text-decoration: none;
-  padding: 24px 0 24px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .menu-nav.link:hover,
 .menu-nav.link:focus {
   color: var(--textlinknav);
@@ -468,6 +467,7 @@ body {
 .social-footer-items {
   width: 40px;
   height: 40px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-footer-link {
@@ -531,9 +531,14 @@ body {
   justify-content: center;
   margin-bottom: 72px;
 }
+.filter-items {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .work-items {
   width: calc((100% - 78px) / 3);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .work-items:hover {
@@ -542,7 +547,7 @@ body {
   transform: translate(0);
 }
 
-.work-items:hover .work-cover-block {
+.work-items:hover .work-cover-text {
   transform: translate(0);
 }
 .work.list {
@@ -570,6 +575,9 @@ body {
   overflow: hidden;
 }
 .work-cover-block {
+}
+
+.work-cover-text {
   position: absolute;
   background-color: #4d5ae5;
   padding: 40px 32px;
@@ -579,9 +587,7 @@ body {
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.work-cover-text {
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -609,9 +615,17 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
+.filt-btn:hover .work-cover-text,
+.filt-btn:focus .work-cover-text {
+  transform: translateY(0%);
+}
+
 .project.link {
   text-decoration: none;
   display: block;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .project.link:hover,
 .project.link:focus {
