--- a/css/style.css
+++ b/css/style.css
@@ -532,10 +532,6 @@ body {
   margin-bottom: 72px;
 }
 .filter-items {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .work-items {
   width: calc((100% - 78px) / 3);
@@ -557,7 +553,6 @@ body {
   row-gap: 48px;
   column-gap: 24px;
   list-style: none;
-
   margin: 0 auto;
 }
 .work-items-conteiner {
@@ -618,7 +613,6 @@ body {
 
 .filt-btn:hover .work-cover-text,
 .filt-btn:focus .work-cover-text {
-  transform: translateY(0%);
 }
 
 .project.link {
@@ -627,6 +621,12 @@ body {
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.project.link:hover .work-cover-text,
+.project.link:focus .work-cover-text {
+  transform: translateY(0%);
+}
+
 .project.link:hover,
 .project.link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -654,7 +654,7 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(46, 47, 66, 0.7);
+  background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -669,7 +669,7 @@ body {
   min-height: 584px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  background-color: rgba(46, 47, 66, 0.4);
+  background: #fcfcfc;
   border-radius: 4px;
 }
 
@@ -702,6 +702,7 @@ body {
 .modal-btn:focus {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
 }
 
 .is-hidden {
