--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,7 @@ body {
 /* --------------------SECTION 5 ------- */
 .customers-item {
   height: 88px;
+  width: 168px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   width: calc((100% - 120px) / 6);
